# dbt-debugger

./: .gitignore  LICENSE  README.md  dbt-debug-lineage.html  dbt-debug-run-example.html  dbt-debug-test-example.html  install.sh
.claude/skills/dbt-debugger/: SKILL.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: artifact_sources.py  classifier.py  cli.py  engine.py  parser.py  render.py
backend/app/templates/: app.js  page.html  style.css
backend/app/templates/js/: 00-const.js  10-html.js  15-format.js  20-status.js  30-graph.js  40-viewport.js  50-diagram.js  60-sidebar.js  70-drawer.js  80-app.js
backend/app/web/: index.html
backend/dbt_debug/: artifact_sources.py  classifier.py  cli.py  engine.py  parser.py
backend/dbt_debug/web/: index.html
backend/tests/: test_classifier.py  test_demo_fixture.py  test_engine.py  test_parser.py  test_render_cli.py
docs/: build.sh  demo.html  index.html  run.html  test.html
docs/analysis/: demo.json
fixtures/jaffle_shop/: manifest.json  run_results.json
fixtures/jaffle_shop_demo/: manifest.json  run_results.json
fixtures/jaffle_shop_run/: manifest.json  run_results.json
fixtures/jaffle_shop_test/: manifest.json  run_results.json  sources.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: sample-graph.json
frontend/src/: App.tsx  format.ts  main.tsx  model.ts  status.ts  styles.css  types.ts
frontend/src/components/: Diagram.tsx  Drawer.tsx  Header.tsx  Legend.tsx  Sidebar.tsx  Toolbar.tsx
(+1 files in other folders)
